<resources>
    <string name="app_name">AppTerapeuta</string>
    <string name="robot_battery">Batería: %1$d%%</string>
    <string name="back_arrow">&#8592;</string>
    <string name="back_content_desc">Volver atrás</string>
    <string name="robots">Robots</string>
    <string name="students">Estudiantes</string>
    <string name="sessions">Sesiones</string>
    <string name="activity_catalog">Catálogo de actividades</string>
    <string name="student_name">Alumno</string>
    <string name="student_avatar">Avatar</string>
    <string name="student_needs">Necesidades</string>
    <string name="back_text">Volver</string>
    <string name="robot_list_empty">No se han encontrado robots</string>
    <string name="robot_status_detected">Detectado</string>
    <string name="robot_connecting">Conectando a %1$s (%2$s:%3$d)…</string>
    <string name="connection_status_connecting">Conectando…</string>
    <string name="connection_status_connected">Conectado ✓</string>
    <string name="connection_status_error">Error de conexión</string>
    <string name="pong_received">Robot respondió: PONG ✓</string>
</resources>
